--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "preferGlobal": true,
   "devDependencies": {
+	"chai-as-promised": "^7.1.1",
     "chai": "^4.1.2",
     "mocha": "^4.0.1"
   }
